welcome.lessons.welcome.array.has271.Has271.scala.error
has271:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( y = 1 ) { true }
               ^