welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	var y:Int = 0
	for ( x <- 0 to nums.length - 1 ) {
		if (nums (x+1) == nums (x) + 5) {
			if ( nums (x+2) == nums (x)-1 || nums(x+2) == nums(x)-3 || nums (x+2) == nums (x) +1 ) { y=1}
		}
		 
	}
	if ( y = 1 ) { true }
	else { false }
}
